--- a/style/main.css
+++ b/style/main.css
@@ -1,33 +1,50 @@
 
+
 body{
-  background-color:lightblue;
+  background-color:rgb(34,22,33);
+  background-color:gray;
   font-family: Arial;
 }
-.borderShadow {
-	border: 1px solid #ddd;
-	box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
-}
+
+
 *{
   box-sizing: border-box;
 }
 
+a.nav-link{
+  padding: 3px;
+}
+
+
+.card{
+background-color:lightblue
+}
+
+/* ****************************navbar*/
 .navbar{
 height:30px;
 }
-ul.navbar-nav li a{padding:auto 30px;
+ul.navbar-nav li.nav-item a.nav-link{
+  padding:auto 30px;
    text-align: center;
+   color:rgba(255,255,255,1);
+   text-shadow: 2px 2px 4px #000000;
 }
 
 ul.navbar-nav li a:hover:not(.active) {
 background-color: #111;
 }
-
 nav a img{
   width:30px;
 }
-
-
-
-a.nav-link{
-  padding: 3px;
+span.sitename{
+   color: white;
+   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
+
+/* *****************************/
+
+
+
+
+
