--- a/view/body/forget.html
+++ b/view/body/forget.html
@@ -1,11 +1,11 @@
 
 <div class="container">
 	<div class="row">
-	  	<div class="col-sm-10 col-lg-6 mx-auto pt-3">
-	  	<h2>Reset Password</h2>
-	  		<div class="card mb-3">
-			  <div class="card-body">
-          		<p class="card-text">
+		<div class="col-sm-10 col-lg-6 mx-auto pt-3">
+			<h2>Reset Password</h2>
+			<div class="card mb-3">
+				<div class="card-body">
+					<div class="card-text">
 					<form role="form" method="post" action="" autocomplete="off">
 						<p><a href='login'>Back to login page</a></p>
 						<hr>
@@ -21,7 +21,8 @@
 							<div class="col-xs-6 col-md-6"><input type="submit" name="submit" value="Sent Reset Link" class="btn btn-primary btn-block btn-lg" tabindex="2"></div>
 						</div>
 					</form>
-				</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
