--- a/style/show_post.css
+++ b/style/show_post.css
@@ -1,3 +1,10 @@
 body > div.container.mt-3 > div > div.col-2 > div > div > span > div > div {
    text-shadow: 2px 2px 4px #000000;
 }
+.card-body{
+	position:relative;
+}
+div.card-body > span > img{
+	padding:5px;
+	width:30px;
+}
