--- a/style/show_post.css
+++ b/style/show_post.css
@@ -4,7 +4,7 @@ body > div.container.mt-3 > div > div.col-2 > div > div > span > div > div {
 .card-body{
 	position:relative;
 }
-.point{
+.badPoint,.goodPoint{
 
 	padding:5px;
 	width:30px;
